<resources>
    <string name="app_name">TestApplication</string>
    <string name="hello">Hello</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
</resources>