<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mt.think.testapplication.auth_screen.login.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="mt.think.testapplication.auth_screen.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_login_hello_text"
            style="@style/HeaderTextStyle"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_hello_text">

            <EditText
                android:id="@+id/fragment_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@{loginViewModel.userData.login}"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_email_layout">

            <EditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@{loginViewModel.userData.password}"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_login_connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_password_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fragment_login_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{loginViewModel.emailBindable}"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_connect_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>